fix navbar spacing on project pages

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@
 }
 
 .nav-spacer{		
+    padding-bottom:80px;
+}
+
+.nav-snap{		
     display: block;
     position: relative;
     top: -70px;
